drobne poprawki, dodany plugin dla sbt - revolver, dedykowany dla spray.io ale sprawdza się po prostu ze wszystkim, zadanie zdane na zajeciach, 40pkt (max)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,9 +3,11 @@ akka {
   actor {
     debug {
       receive = on
+      fsm = on
     }
   }
 }
+
 reactive.lab2 {
   // buyers = ["Buyer1", "Buyer2"]
   // items = ["Item1", "Item2"]
