zaimplementowany pierwszy punkt z trzeciego zadania

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,7 @@
 akka {
-  loglevel = "INFO"
+  loglevel = INFO
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  log-dead-letters-during-shutdown = on
   actor {
     debug {
       receive = on
@@ -9,6 +11,15 @@ akka {
 }
 
 reactive.lab2 {
-  // buyers = ["Buyer1", "Buyer2"]
-  // items = ["Item1", "Item2"]
+  sellers {
+    Hellgorak = [Hellforged Axe, Inferno Devil Axe, Devils's Ornate Axe, Royal Drakinata]
+    Haroun = [Wand of Ornate, Wand of Starstorm, Wand of Inferno, Shimmer Devil's Wand of Ornate]
+    Morgaroth = [The Devileye, Ornate Crossbow, Devil's Vortex Bolt of Inferno]
+  }
+
+  buyers {
+    Armenius = Inferno
+    Irahsae = Devil
+    Cocoon = Ornate
+  }
 }
