dodana implementacja licytowania z maksymalną ceną

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,8 +18,17 @@ reactive.lab2 {
   }
 
   buyers {
-    Armenius = Inferno
-    Irahsae = Devil
-    Cocoon = Ornate
+    Armenius {
+      target = Inferno
+      max-price = 40
+    }
+    Irahsae {
+      target = Devil
+      max-price = 50
+    }
+    Cocoon {
+      target = Ornate
+      max-price = 90
+    }
   }
 }
