zaimplementowane pierwsze zadanie z laboratorium 4

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-  loglevel = INFO
+  loglevel = Info
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   log-dead-letters-during-shutdown = on
   actor {
@@ -31,4 +31,6 @@ reactive.lab2 {
       max-price = 90
     }
   }
+
+  master-search.underlying-count = 5
 }
