zaimplementowane pierwsze zadanie w laborce 6

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,10 @@ akka {
   }
 }
 
+reactive.lab6.auction-publisher {
+  port = 9020
+}
+
 reactive.lab2 {
   sellers {
     Hellgorak = [Hellforged Axe, Inferno Devil Axe, Devils's Ornate Axe, Royal Drakinata]
@@ -31,6 +35,8 @@ reactive.lab2 {
       max-price = 90
     }
   }
+
+  AuctionPublisher.address = "http://localhost:9020"
 
   master-search.underlying-count = 5
 }
